# Project2---AGL-Autonomous-Legal-Contract-Negotiator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
assets/: nda_sample.docx
contracts/: nda_template.py
scripts/: run_mock.py
src/: app.py  config.py
src/agents/: arbitrator.py  buyer_agent.py  seller_agent.py
src/contracts/: nda_template.py
src/core/: contract_writer.py  convergence.py  negotiation_engine.py
